src/pglc.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 114
#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_STRING(yycontext *yy); /* 114 */
YY_RULE(int) yy_NUMBER(yycontext *yy); /* 113 */
YY_RULE(int) yy_NAME(yycontext *yy); /* 112 */
YY_RULE(int) yy_sync_comp_for(yycontext *yy); /* 111 */
YY_RULE(int) yy_comp_if(yycontext *yy); /* 110 */
YY_RULE(int) yy_comp_iter(yycontext *yy); /* 109 */
YY_RULE(int) yy_argument(yycontext *yy); /* 108 */
YY_RULE(int) yy_sliceop(yycontext *yy); /* 107 */
YY_RULE(int) yy_subscript(yycontext *yy); /* 106 */
YY_RULE(int) yy_subscriptlist(yycontext *yy); /* 105 */
YY_RULE(int) yy_comp_for(yycontext *yy); /* 104 */
YY_RULE(int) yy_number(yycontext *yy); /* 103 */
YY_RULE(int) yy_string(yycontext *yy); /* 102 */
YY_RULE(int) yy_dictorsetmaker(yycontext *yy); /* 101 */
YY_RULE(int) yy_testlist_comp(yycontext *yy); /* 100 */
YY_RULE(int) yy_trailer(yycontext *yy); /* 99 */
YY_RULE(int) yy_atom(yycontext *yy); /* 98 */
YY_RULE(int) yy_atom_expr(yycontext *yy); /* 97 */
YY_RULE(int) yy_power(yycontext *yy); /* 96 */
YY_RULE(int) yy_factor(yycontext *yy); /* 95 */
YY_RULE(int) yy_term(yycontext *yy); /* 94 */
YY_RULE(int) yy_arith_expr(yycontext *yy); /* 93 */
YY_RULE(int) yy_shift_expr(yycontext *yy); /* 92 */
YY_RULE(int) yy_and_expr(yycontext *yy); /* 91 */
YY_RULE(int) yy_xor_expr(yycontext *yy); /* 90 */
YY_RULE(int) yy_comp_op(yycontext *yy); /* 89 */
YY_RULE(int) yy_comparison(yycontext *yy); /* 88 */
YY_RULE(int) yy_not_test(yycontext *yy); /* 87 */
YY_RULE(int) yy_and_test(yycontext *yy); /* 86 */
YY_RULE(int) yy_lambdef_nocond(yycontext *yy); /* 85 */
YY_RULE(int) yy_test_nocond(yycontext *yy); /* 84 */
YY_RULE(int) yy_or_test(yycontext *yy); /* 83 */
YY_RULE(int) yy_ordef(yycontext *yy); /* 82 */
YY_RULE(int) yy_lambdef(yycontext *yy); /* 81 */
YY_RULE(int) yy_DEDENT(yycontext *yy); /* 80 */
YY_RULE(int) yy_INDENT(yycontext *yy); /* 79 */
YY_RULE(int) yy_expr(yycontext *yy); /* 78 */
YY_RULE(int) yy_with_item(yycontext *yy); /* 77 */
YY_RULE(int) yy_except_clause(yycontext *yy); /* 76 */
YY_RULE(int) yy_EQDENT(yycontext *yy); /* 75 */
YY_RULE(int) yy_suite(yycontext *yy); /* 74 */
YY_RULE(int) yy_namedexpr_test(yycontext *yy); /* 73 */
YY_RULE(int) yy_async_stmt(yycontext *yy); /* 72 */
YY_RULE(int) yy_with_stmt(yycontext *yy); /* 71 */
YY_RULE(int) yy_try_stmt(yycontext *yy); /* 70 */
YY_RULE(int) yy_while_stmt(yycontext *yy); /* 69 */
YY_RULE(int) yy_for_stmt(yycontext *yy); /* 68 */
YY_RULE(int) yy_if_stmt(yycontext *yy); /* 67 */
YY_RULE(int) yy_dotted_as_name(yycontext *yy); /* 66 */
YY_RULE(int) yy_import_as_name(yycontext *yy); /* 65 */
YY_RULE(int) yy_import_as_names(yycontext *yy); /* 64 */
YY_RULE(int) yy_dotted_as_names(yycontext *yy); /* 63 */
YY_RULE(int) yy_import_from(yycontext *yy); /* 62 */
YY_RULE(int) yy_import_name(yycontext *yy); /* 61 */
YY_RULE(int) yy_yield_stmt(yycontext *yy); /* 60 */
YY_RULE(int) yy_raise_stmt(yycontext *yy); /* 59 */
YY_RULE(int) yy_return_stmt(yycontext *yy); /* 58 */
YY_RULE(int) yy_continue_stmt(yycontext *yy); /* 57 */
YY_RULE(int) yy_break_stmt(yycontext *yy); /* 56 */
YY_RULE(int) yy_exprlist(yycontext *yy); /* 55 */
YY_RULE(int) yy_star_expr(yycontext *yy); /* 54 */
YY_RULE(int) yy_yield_expr(yycontext *yy); /* 53 */
YY_RULE(int) yy_augassign(yycontext *yy); /* 52 */
YY_RULE(int) yy_annassign(yycontext *yy); /* 51 */
YY_RULE(int) yy_testlist_star_expr(yycontext *yy); /* 50 */
YY_RULE(int) yy_import_stmt(yycontext *yy); /* 49 */
YY_RULE(int) yy_assert_stmt(yycontext *yy); /* 48 */
YY_RULE(int) yy_nonlocal_stmt(yycontext *yy); /* 47 */
YY_RULE(int) yy_global_stmt(yycontext *yy); /* 46 */
YY_RULE(int) yy_pass_stmt(yycontext *yy); /* 45 */
YY_RULE(int) yy_del_stmt(yycontext *yy); /* 44 */
YY_RULE(int) yy_flow_stmt(yycontext *yy); /* 43 */
YY_RULE(int) yy_expr_stmt(yycontext *yy); /* 42 */
YY_RULE(int) yy_small_stmt(yycontext *yy); /* 41 */
YY_RULE(int) yy_varargslist_starargs(yycontext *yy); /* 40 */
YY_RULE(int) yy_vararg(yycontext *yy); /* 39 */
YY_RULE(int) yy_varargslist_no_posonly(yycontext *yy); /* 38 */
YY_RULE(int) yy_posarglist(yycontext *yy); /* 37 */
YY_RULE(int) yy_varargslist(yycontext *yy); /* 36 */
YY_RULE(int) yy_identifier(yycontext *yy); /* 35 */
YY_RULE(int) yy_expression(yycontext *yy); /* 34 */
YY_RULE(int) yy_parameter(yycontext *yy); /* 33 */
YY_RULE(int) yy_parameter_list_starargs(yycontext *yy); /* 32 */
YY_RULE(int) yy_typec(yycontext *yy); /* 31 */
YY_RULE(int) yy_defparameter(yycontext *yy); /* 30 */
YY_RULE(int) yy_parameter_list_no_posonly(yycontext *yy); /* 29 */
YY_RULE(int) yy_parameter_list_posonly(yycontext *yy); /* 28 */
YY_RULE(int) yy_parameter_list(yycontext *yy); /* 27 */
YY_RULE(int) yy_typedargslist(yycontext *yy); /* 26 */
YY_RULE(int) yy_func_body_suite(yycontext *yy); /* 25 */
YY_RULE(int) yy_TYPE_COMMENT(yycontext *yy); /* 24 */
YY_RULE(int) yy_test(yycontext *yy); /* 23 */
YY_RULE(int) yy_parameters(yycontext *yy); /* 22 */
YY_RULE(int) yy_name(yycontext *yy); /* 21 */
YY_RULE(int) yy_async_funcdef(yycontext *yy); /* 20 */
YY_RULE(int) yy_funcdef(yycontext *yy); /* 19 */
YY_RULE(int) yy_classdef(yycontext *yy); /* 18 */
YY_RULE(int) yy_decorated(yycontext *yy); /* 17 */
YY_RULE(int) yy_decorators(yycontext *yy); /* 16 */
YY_RULE(int) yy_arglist(yycontext *yy); /* 15 */
YY_RULE(int) yy_dotted_name(yycontext *yy); /* 14 */
YY_RULE(int) yy_decorator(yycontext *yy); /* 13 */
YY_RULE(int) yy_testlist(yycontext *yy); /* 12 */
YY_RULE(int) yy_ENDMARKER(yycontext *yy); /* 11 */
YY_RULE(int) yy_stmt(yycontext *yy); /* 10 */
YY_RULE(int) yy__(yycontext *yy); /* 9 */
YY_RULE(int) yy_ENCODING(yycontext *yy); /* 8 */
YY_RULE(int) yy_simple_stmt(yycontext *yy); /* 7 */
YY_RULE(int) yy_NEWLINE(yycontext *yy); /* 6 */
YY_RULE(int) yy_compound_stmt(yycontext *yy); /* 5 */
YY_RULE(int) yy_single_input(yycontext *yy); /* 4 */
YY_RULE(int) yy_eval_input(yycontext *yy); /* 3 */
YY_RULE(int) yy_file_input(yycontext *yy); /* 2 */
YY_RULE(int) yy_start(yycontext *yy); /* 1 */


YY_RULE(int) yy_STRING(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "STRING"));
  {  int yypos2= yy->__pos, yythunkpos2= yy->__thunkpos;
  {  int yypos4= yy->__pos, yythunkpos4= yy->__thunkpos;  if (!yymatchDot(yy)) goto l2;  yy->__pos= yypos4; yy->__thunkpos= yythunkpos4;
  }  goto l3;
  l2:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;
  }
  l3:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "STRING", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_NUMBER(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "NUMBER"));
  {  int yypos6= yy->__pos, yythunkpos6= yy->__thunkpos;
  {  int yypos8= yy->__pos, yythunkpos8= yy->__thunkpos;  if (!yymatchDot(yy)) goto l6;  yy->__pos= yypos8; yy->__thunkpos= yythunkpos8;
  }  goto l7;
  l6:;	  yy->__pos= yypos6; yy->__thunkpos= yythunkpos6;
  }
  l7:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "NUMBER", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_NAME(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "NAME"));
  {  int yypos10= yy->__pos, yythunkpos10= yy->__thunkpos;
  {  int yypos12= yy->__pos, yythunkpos12= yy->__thunkpos;  if (!yymatchDot(yy)) goto l10;  yy->__pos= yypos12; yy->__thunkpos= yythunkpos12;
  }  goto l11;
  l10:;	  yy->__pos= yypos10; yy->__thunkpos= yythunkpos10;
  }
  l11:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "NAME", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_sync_comp_for(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "sync_comp_for"));  if (!yymatchString(yy, "for")) goto l13;  if (!yy_exprlist(yy)) goto l13;  if (!yy__(yy)) goto l13;  if (!yymatchString(yy, "in")) goto l13;  if (!yy__(yy)) goto l13;  if (!yy_or_test(yy)) goto l13;  if (!yy__(yy)) goto l13;
  {  int yypos14= yy->__pos, yythunkpos14= yy->__thunkpos;  if (!yy_comp_iter(yy)) goto l14;  goto l15;
  l14:;	  yy->__pos= yypos14; yy->__thunkpos= yythunkpos14;
  }
  l15:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "sync_comp_for", yy->__buf+yy->__pos));
  return 1;
  l13:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "sync_comp_for", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_comp_if(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "comp_if"));  if (!yymatchString(yy, "if")) goto l16;  if (!yy_test_nocond(yy)) goto l16;
  {  int yypos17= yy->__pos, yythunkpos17= yy->__thunkpos;  if (!yy_comp_iter(yy)) goto l17;  goto l18;
  l17:;	  yy->__pos= yypos17; yy->__thunkpos= yythunkpos17;
  }
  l18:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "comp_if", yy->__buf+yy->__pos));
  return 1;
  l16:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comp_if", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_comp_iter(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "comp_iter"));  if (!yy__(yy)) goto l19;
  {  int yypos20= yy->__pos, yythunkpos20= yy->__thunkpos;  if (!yy_comp_for(yy)) goto l21;  goto l20;
  l21:;	  yy->__pos= yypos20; yy->__thunkpos= yythunkpos20;  if (!yy_comp_if(yy)) goto l19;
  }
  l20:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "comp_iter", yy->__buf+yy->__pos));
  return 1;
  l19:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comp_iter", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_argument(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "argument"));
  {  int yypos23= yy->__pos, yythunkpos23= yy->__thunkpos;  if (!yymatchString(yy, "**")) goto l24;  if (!yy_test(yy)) goto l24;  goto l23;
  l24:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yymatchChar(yy, '*')) goto l25;  if (!yy_test(yy)) goto l25;  goto l23;
  l25:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yy_test(yy)) goto l26;  if (!yymatchString(yy, ":=")) goto l26;  if (!yy__(yy)) goto l26;  if (!yy_test(yy)) goto l26;  goto l23;
  l26:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yy_test(yy)) goto l27;  if (!yymatchChar(yy, '=')) goto l27;  if (!yy__(yy)) goto l27;  if (!yy_test(yy)) goto l27;  goto l23;
  l27:;	  yy->__pos= yypos23; yy->__thunkpos= yythunkpos23;  if (!yy_test(yy)) goto l22;
  {  int yypos28= yy->__pos, yythunkpos28= yy->__thunkpos;  if (!yy_comp_for(yy)) goto l28;  goto l29;
  l28:;	  yy->__pos= yypos28; yy->__thunkpos= yythunkpos28;
  }
  l29:;	
  }
  l23:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "argument", yy->__buf+yy->__pos));
  return 1;
  l22:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "argument", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_sliceop(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "sliceop"));  if (!yymatchChar(yy, ':')) goto l30;  if (!yy__(yy)) goto l30;
  {  int yypos31= yy->__pos, yythunkpos31= yy->__thunkpos;  if (!yy_test(yy)) goto l31;  goto l32;
  l31:;	  yy->__pos= yypos31; yy->__thunkpos= yythunkpos31;
  }
  l32:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "sliceop", yy->__buf+yy->__pos));
  return 1;
  l30:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "sliceop", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_subscript(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "subscript"));
  {  int yypos34= yy->__pos, yythunkpos34= yy->__thunkpos;
  {  int yypos36= yy->__pos, yythunkpos36= yy->__thunkpos;  if (!yy_test(yy)) goto l36;  goto l37;
  l36:;	  yy->__pos= yypos36; yy->__thunkpos= yythunkpos36;
  }
  l37:;	  if (!yymatchChar(yy, ':')) goto l35;  if (!yy__(yy)) goto l35;
  {  int yypos38= yy->__pos, yythunkpos38= yy->__thunkpos;  if (!yy_test(yy)) goto l38;  goto l39;
  l38:;	  yy->__pos= yypos38; yy->__thunkpos= yythunkpos38;
  }
  l39:;	
